# MMA_QENS

./: LICENSE  README.md  pyproject.toml
MMA-QENS/: core.py
MMA-QENS/pythonpackage/: plot.py
MMA_QENS/: core.py
MMA_QENS/pythonpackage/: ExternalFunctions.py
test/: test_bulkWater.ipynb
test/Data/: H20_IRIS_300K_nosub.csv  vana_IRIS_nosub.csv
